# OhMyKeymint

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE-2  README.md  build.gradle.kts  build.py  build.rs  changelog.md  module.json  settings.gradle.kts  update.json
.cargo/: config.example.toml
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml  update-changelog.yml
aidl/5/: README
aidl/5/android/apex/: IApexService.aidl
aidl/5/android/security/authorization/: AuthorizationTokens.aidl
aidl/5/android/system/keystore2/: CreateOperationResponse.aidl
aidl/android/apex/: ApexInfo.aidl  IApexService.aidl
aidl/android/content/pm/: IPackageManager.aidl  IPackageManagerNative.aidl  PackageInfoNative.aidl  SignatureNative.aidl  SigningInfoNative.aidl
aidl/android/os/: IPermissionController.aidl
aidl/android/security/authorization/: IKeystoreAuthorization.aidl  ResponseCode.aidl
aidl/android/security/metrics/: Algorithm.aidl  AtomID.aidl  KeyCreationPerUid.aidl  KeyOperationPerUid.aidl  KeyOperationStreamingStats.aidl  KeyOperationWithGeneralInfo.aidl  KeysPerUid.aidl  KeystoreAtomPayload.aidl  OperationLatency.aidl  OperationType.aidl
aidl/android/system/keystore2/: ResponseCode.aidl
aidl/top/qwq2333/ohmykeymint/: CallerInfo.aidl  IOhMyAuthorizationService.aidl  IOhMyKsService.aidl  IOhMyMaintenanceService.aidl  IOhMySecurityLevel.aidl
boringssl/: Cargo.toml
boringssl/src/: aes.rs  aes_cmac.rs  des.rs  ec.rs  err.rs  error.rs  hmac.rs  km.rs  lib.rs  mldsa.rs  rng.rs  rsa.rs  tests.rs  types.rs  zvec.rs
common/: Cargo.toml  generated.cddl
common/src/: android_version.rs  consts.rs  crypto.rs  keyblob.rs  lib.rs  rpc.rs  selinux.rs  tag.rs  vintf.rs
common/src/crypto/: aes.rs  des.rs  ec.rs  hmac.rs  mldsa.rs  rsa.rs  traits.rs
common/src/crypto/mldsa/: tests.rs
common/src/keyblob/: keyblob.cddl  legacy.rs  tests.rs
common/src/keyblob/legacy/: tests.rs
common/src/runtime/: file_watch.rs  fs.rs  logging.rs  mod.rs  retry.rs
common/src/tag/: info.rs  legacy.rs  tests.rs
common/src/tag/info/: tests.rs
derive/: Cargo.toml
derive/tests/: integration_test.rs
gradle/: libs.versions.toml
hal/src/: env.rs  hal.rs  keymint.rs  lib.rs
hal/src/hal/: tests.rs
injector/: Cargo.toml  build.rs
injector/src/: config.rs  filter.rs  forward.rs  hook.rs  identify.rs  inject.rs  ipc.rs  legacy.rs  logging.rs  main.rs  parcel.rs  route.rs  sys.rs  tracker.rs  utils.rs
injector/src/hook/: binder.rs  install.rs  intercept.rs  mod.rs  rewrite.rs
libs/rust/: .gitignore  Cargo.toml  build.rs  device.prop
libs/rust/boringssl/: Cargo.toml
libs/rust/boringssl/src/: aes.rs  aes_cmac.rs  des.rs  ec.rs  hmac.rs  km.rs  lib.rs  rsa.rs
libs/rust/common/src/: crypto.rs  keyblob.rs  lib.rs  tag.rs
libs/rust/common/src/crypto/: ec.rs  (+5 more)
libs/rust/proto/: storage.proto
libs/rust/rsproperties-service/: Cargo.toml  README.md
libs/rust/rsproperties-service/examples/: example_service.rs
libs/rust/rsproperties-service/src/: lib.rs
libs/rust/rsproperties-service/tests/: comprehensive_api_tests.rs  error_handling_tests.rs  example_usage_tests.rs  parsed_api_tests.rs  set_api_tests.rs
libs/rust/src/: clock.rs  consts.rs  global.rs  lib.rs  logging.rs  macros.rs  main.rs  soft.rs  utils.rs
libs/rust/src/keymaster/: attestation_key_utils.rs  crypto.rs  db.rs  enforcements.rs  error.rs  keymint_device.rs  keymint_operation.rs  metrics_store.rs  mod.rs  operation.rs  security_level.rs  super_key.rs  utils.rs
libs/rust/src/keymint/: clock.rs  mod.rs  sdd.rs
libs/rust/src/plat/: property_watcher.rs  utils.rs
libs/rust/ta/src/: cert.rs  clock.rs  device.rs  keys.rs  lib.rs  operation.rs  rkp.rs  secret.rs  tests.rs
libs/rust/tests/tests/: keyblob_test.rs
libs/rust/watchdog/src/: lib.rs
libs/rust/wire/src/: keymint.rs  legacy.rs  lib.rs  secureclock.rs  sharedsecret.rs  tests.rs  types.rs
rsproperties-service/: Cargo.toml  README
rsproperties-service/src/: properties_service.rs  socket_service.rs
rsproperties-service/tests/: common.rs  final_comprehensive_tests.rs  integration_tests.rs  new_api_showcase.rs  performance_tests.rs
scripts/: deploy_hot_update.py  deploy_injector.py  setup_cargo_config.py
src/: .gitignore  att_mgr.rs  config.rs  consts.rs  global.rs  keybox.rs  logging.rs  macros.rs  main.rs  utils.rs  vbmeta.rs  watchdog.rs
src/keymaster/: apex.rs  async_task.rs  attestation_key_utils.rs  audit_log.rs  authorization.rs  boot_key.rs  crypto.rs  db.rs  enforcements.rs  entropy.rs  error.rs  flags.rs  gc.rs  id_rotation.rs  key_parameter.rs  keymint_device.rs  keymint_operation.rs  maintenance.rs  metrics.rs  metrics_store.rs  mod.rs  operation.rs  permission.rs  security_level.rs  security_level_manager.rs  service.rs  super_key.rs  sw_keyblob.rs  utils.rs
src/keymaster/async_task/: tests.rs
src/keymaster/database/: mod.rs  perboot.rs  utils.rs  versioning.rs
src/keymaster/error/: tests.rs
src/keymaster/key_parameter/: basic_tests.rs  generated_key_parameter_tests.rs  storage_tests.rs  wire_tests.rs
src/keymaster/metrics_store/: tests.rs
src/keymaster/sw_keyblob/: tests.rs
src/keymaster/utils/: tests.rs
src/keymint/: clock.rs  mod.rs  rpc.rs  sdd.rs  soft.rs
src/plat/: aaid.rs  attestation.rs  device_ids.rs  file_watch.rs  keymint_profile.rs  legacy.rs  mod.rs  pm.rs  property_watcher.rs  resetprop.rs  utils.rs  vbmeta.rs
src/selinux/: mod.rs  sys.rs
ta/: Cargo.toml
ta/fuzz/: Cargo.toml
ta/src/: cert.rs  clock.rs  device.rs  keys.rs  lib.rs  operation.rs  rkp.rs  secret.rs  tests.rs
ta/src/operation/: begin.rs
template/: LICENSE.2  customize.sh  daemon  daemon-injector  injector.toml  keybox.xml  module.prop  post-fs-data.sh  sepolicy.rule  service.sh
tests/: Cargo.toml
tests/aosp_tamper/: classify.rs  mod.rs  model.rs  native.rs  parcel.rs  runtime.rs  score.rs
tests/src/: lib.rs
tests/tests/: keyblob_test.rs
watchdog/: Cargo.toml
watchdog/src/: lib.rs
wire/: Cargo.toml
wire/src/: keymint.rs  legacy.rs  lib.rs  rpc.rs  secureclock.rs  sharedsecret.rs  tests.rs  types.rs
(+22 files in other folders)
