[package]
name = "OhMyKeymint"
version = "1.1.1"
edition = "2021"
license = "AGPL-3.0-or-later"

[[bin]]
name = "keymint"
path = "src/main.rs"

[[bin]]
name = "aosp_tamper_probe"
path = "tests/bin/aosp_tamper_probe.rs"

[dependencies]
jni = "0.22.4"
syscalls = "0.8.1"
kmr-derive = { path = "derive" }
kmr-common = { path = "common" }
kmr-crypto-boring = { path = "boringssl" }
kmr-ta = { path = "ta" }
kmr-wire = { path = "wire" }
libc = "0.2.186"
prost = "0.14.3"
prost-types = "0.14.3"
hex = "0.4.3"
log4rs = "1.4.0"
log = "0.4.30"
rsbinder = { version = "0.8.0", features = ["android_12_plus"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
anyhow = "1.0.102"
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["macros", "libc"] }
lazy_static = "1.5.0"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
x509-cert = "0.2.5"
watchdog_rs = { path = "watchdog", version = "0.1.0" }
nix = { version = "0.31.3", features = ["mman"] }
rsproperties = { version = "0.3.0", features = ["builder"] }
libsqlite3-sys = "0.38.0"
rand = "0.10.1"
der = "0.8.0"
toml = "1.1.0"
regex = "1.12.3"
hotwatch = "0.5.0"
base64 = "0.22.1"
quick-xml = { version = "0.40.1", features = ["serialize"] }
goblin = "0.10.3"
ring = "0.17.14"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
multi_log = "0.1.2"

[profile.dev]
incremental = true

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
debug = 0           # Disable debug info
incremental = true

[workspace]
members = [
  "boringssl",
  "common",
  "derive",
  "ta",
  "tests",
  "wire",
  "watchdog",
  "injector",
]

[patch.crates-io]
kmr-derive = { path = "derive" }
kmr-common = { path = "common" }
kmr-crypto-boring = { path = "boringssl" }
kmr-ta = { path = "ta" }
kmr-tests = { path = "tests" }
kmr-wire = { path = "wire" }
watchdog_rs = { path = "watchdog" }
injector = { path = "injector" }

[build-dependencies]
prost-build = "0.14.3"
rsbinder-aidl = "0.8.0"

[dev-dependencies]
rcgen = "0.14.8"
