[package]
name = "OhMyKeymint"
version = "1.2.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[[bin]]
name = "keymint"
path = "src/main.rs"

[dependencies]
syscalls = "0.8.1"
kmr-derive = { path = "derive" }
kmr-common = { path = "common" }
kmr-crypto-boring = { path = "boringssl" }
kmr-ta = { path = "ta" }
kmr-wire = { path = "wire" }
libc = "0.2.186"
prost = "0.14.4"
prost-types = "0.14.4"
hex = "0.4.3"
log4rs = "1.4.0"
log = "0.4.32"
rsbinder = { version = "0.9.0", features = ["android_12_plus", "rpc"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
anyhow = "1.0.102"
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["macros", "libc"] }
lazy_static = "1.5.0"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
x509-cert = "0.2.5"
watchdog_rs = { path = "watchdog", version = "0.1.0" }
nix = { version = "0.31.3", features = ["fs", "mman"] }
rsproperties = { version = "0.5.0", features = ["builder"] }
libsqlite3-sys = "0.38.0"
rand = "0.10.1"
der = "0.8.0"
toml = "1.1.0"
regex = "1.12.4"
hotwatch = "0.5.0"
base64 = "0.22.1"
quick-xml = { version = "0.40.1", features = ["serialize"] }
goblin = "0.10.7"
ring = "0.17.14"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
multi_log = "0.1.2"

[profile.dev]
incremental = true

[profile.release]
opt-level = 3
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
debug = 0           # Disable debug info
incremental = true

[workspace]
members = [
  "boringssl",
  "common",
  "derive",
  "ta",
  "tests",
  "wire",
  "watchdog",
  "injector",
]

[patch.crates-io]
kmr-derive = { path = "derive" }
kmr-common = { path = "common" }
kmr-crypto-boring = { path = "boringssl" }
kmr-ta = { path = "ta" }
kmr-tests = { path = "tests" }
kmr-wire = { path = "wire" }
watchdog_rs = { path = "watchdog" }
injector = { path = "injector" }

[build-dependencies]
prost-build = "0.14.4"
rsbinder-aidl = "0.9.0"

[dev-dependencies]
ciborium = "0.2.2"
rcgen = "0.14.8"
tempfile = "3.27.0"
