[package]
name = "injector"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
build = "build.rs"

[[bin]]
name = "inject"
path = "src/main.rs"

[dependencies]
libc = "0.2.180"
log = "0.4.29"
log4rs = "1.4.0"
nix = { version = "0.31.2", features = ["dir", "fs", "ptrace", "signal"] }
lsplt-rs = "2.1.6"
anyhow = "1.0.102"
async-trait = "0.1.89"
rsbinder = { version = "0.6.0", features = ["android_12_plus"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
toml = "1.0.4"
rand = "0.9.2"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
multi_log = "0.1.2"

[build-dependencies]
rsbinder-aidl = "0.6.0"
