[package]
name = "rsproperties-service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
rsproperties = { version = "0.3.0", features = ["builder"] }
log = "0.4.29"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
rsactor = "0.14.1"

[dev-dependencies]
env_logger = "0.11.10"
ctrlc = "3.5.2"
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
